--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,6 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Bài tập Ruby on Rails buổi 4:
+- List danh sách các Microposts trên màn hình show user			
+- Trong màn hình thêm mới Micropost, chuyển text box nhập user_id thành combobox (hộp chọn Select) cho phép chọn danh sách User			
+- Commit source code lên GitHub và gửi link trên GitHub vào email để nộp bài			
